--- a/mark2/compiler/Cargo.toml
+++ b/mark2/compiler/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "assembler"
+name = "compiler"
 version = "0.1.0"
 authors = ["John Erickson <john.t.erickson@gmail.com>"]
 edition = "2018"
@@ -7,6 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-common = { path = "../common" }
-strum = "0.16.0"
-strum_macros = "0.16.0"
