--- a/mark2/compiler/Cargo.toml
+++ b/mark2/compiler/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pom = "*"
-lazy_static = "1.4.0"
+pest = "*"
+pest_derive = "*"
